Fix some minor spacing issues

--- a/app/components/work_packages/date_picker/date_form_component.sass
+++ b/app/components/work_packages/date_picker/date_form_component.sass
@@ -1,9 +1,12 @@
 .wp-datepicker-dialog-date-form
-  display: grid
-  grid-template-columns: 1fr 1fr 170px
-  grid-template-areas: "start-date due-date duration"
-  grid-column-gap: 1rem
+  gap: 1rem
 
+  &--start-date,
+  &--due-date
+    flex: 1 1 100%
+
+  &--duration
+    flex: 1 0 170px
 
   &--add-button
     // The other fields have a 20px label on top + 4px space between label and field
